--- a/WheelManager/app/src/main/AndroidManifest.xml
+++ b/WheelManager/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WheelManager">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".NavigatioBetaActivity"
+            android:label="@string/title_activity_navigatio_beta"
+            android:theme="@style/Theme.WheelManager.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
