--- a/WheelManager/local.properties
+++ b/WheelManager/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue May 04 11:11:11 COT 2021
-sdk.dir=C\:\\Users\\Usuario\\AppData\\Local\\Android\\Sdk
+#Tue May 04 06:52:49 COT 2021
+sdk.dir=C\:\\Users\\Sergio_\\AppData\\Local\\Android\\Sdk
